--- a/XAI.ipynb
+++ b/XAI.ipynb
@@ -15,9 +15,9 @@
         "id": "D-DHqaP6uP5r"
       },
       "source": [
-        "## LAB CHALLENGE 3: Explaining Recommender System\n",
+        "## Explaining Recommender System\n",
         "\n",
-        "In the previous lecture we have built a recommender system using the Neural Matrix Factorization framework. This framework allowed us to combine the GMF layers with the MLP layers.\n",
+        "Till now we have built a recommender system using the Neural Matrix Factorization framework. This framework allowed us to combine the GMF layers with the MLP layers.\n",
         "\n",
         "Let's focus on the MLP model:\n",
         "<center>  <img src=\"https://drive.google.com/uc?export=view&id=1rL_8kkHIhSlQjWr8hNal4Tyog87-2kNP\" width=\"550\" height=\"350\"> </center> \n",
